# LinuxDev2025

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  ans_true1.txt  ans_true2.txt  range.c  test1.gdb  test2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  prot.c
07_Environmental/: CMakeLists.txt  cmake_clean.cmake  rhasher.c  test.txt
08_I18n/: CMakeLists.txt
08_I18n/po/: ru.po
08_I18n/src/: CMakeLists.txt  prog.c
08_I18n_2/: Makefile.am  configure.ac
08_I18n_2/po/: ru.po
08_I18n_2/src/: Makefile.am  prog.c
09_PatchDiff/: Makefile  lab.c  lab1.patch  lab2.patch  lab3.patch
10_LibTesting/: CMakeLists.txt
10_LibTesting/src/: buf.c  buf.h
10_LibTesting/tests/: tests.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  const.h  prog.c  roman_tools.c  roman_tools.h
12_InstallPackaging/: Makefile.am  Readme.md  configure.ac
12_InstallPackaging/po/: Makefile.am  ru.po
12_InstallPackaging/src/: Makefile.am  prog.c  roman_tools.c  roman_tools.h
12_InstallPackaging/tests/: Makefile.am  dummy.c
